--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 <IfModule mod_rewrite.c>
 RewriteEngine on
 RewriteCond $1 !^(index\.php|css|javascript|images|uploads|assets|application)
-RewriteRule ^(.*)$ /Dentview/index.php/$1 [L]
+RewriteRule ^(.*)$ /dentview/index.php/$1 [L]
 </IfModule>
